# GraphicsTutorial

./: .gitignore  CMakeLists.txt  Dependency.cmake  README.md  imgui.ini
.cache/clangd/index/: main.cpp.0ADE7B2700233614.idx  main.cpp.77E7BB9DDB0FA05D.idx
include/glad/: glad.h
shader/: lighting.fs  lighting.vs  normal_fragment.glsl  normal_vertex.glsl  sample.glsl  simple.fs  simple.vs  texture.fs  texture.vs
src/: Buffer.cpp  Buffer.hpp  Common.cpp  Common.hpp  Context.cpp  Context.hpp  GetScaleFactor.mm  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Program.cpp  Program.hpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexLayout.cpp  VertexLayout.hpp  common.cpp  common.hpp  context.cpp  context.hpp  main.cpp  program.cpp  program.hpp  shader.cpp  shader.hpp
srcs/: glad.c  main.cpp
